force-app/main/default/objects/Fractional_Laser_S__c/fields/Fractional_Laser_area__c.field-meta.xml
<CustomField>
    <fullName>Fractional_Laser_area__c</fullName>
    <label>Fractional Laser area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Scar</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Stretch Marks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>