force-app/main/default/objects/Fractional_Laser_S__c/fields/Fractional_Laser_HA_Serum_Applied__c.field-meta.xml
<CustomField>
    <fullName>Fractional_Laser_HA_Serum_Applied__c</fullName>
    <label>Fractional Laser HA Serum Applied</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>