force-app/main/default/objects/Fractional_Laser_S__c/fields/Fractional_Laser_Tip__c.field-meta.xml
<CustomField>
    <fullName>Fractional_Laser_Tip__c</fullName>
    <label>Fractional Laser Tip</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XD</fullName>
            </value>
            <value>
                <fullName>XF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>